@@ -530,6 +530,15 @@ div#profile-tribes-description, div#profile-tribes-members, div#profile-tribes-d
 margin-bottom:15px;
 }
 
+div#profile-tribes-search {
+padding:5px;
+vertical-align:middle;
+float:right;
+width:auto;
+margin-right:-2px;
+margin-top:10px;
+}
+
 /*********************************************************************************************************
 Others
 */
